--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
     <h1>MAKE10 FallPazzle</h1>
-    <div class="game-container">
-        <div id="game-board"></div>
+    <div class="game-wrapper">
+        <div id="game-board">
+            <div id="game-overlay">
+                <div id="game-over-text" style="display: none;">
+                    <h2>Game Over</h2>
+                    <p>Final Score: <span id="final-score">0</span></p>
+                </div>
+                <button id="start-button">Start</button>
+            </div>
+        </div>
         <div class="info">
             <h2>Score: <span id="score">0</span></h2>
             <h2>Next</h2>
