--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main class="game-container">
     <h1>MAKE10 FallPazzle</h1>
     <div class="game-wrapper">
+        <div class="info">
+            <h2>Score: <span id="score">0</span></h2>
+            <h2>Next</h2>
+            <div id="next-block"></div>
+            <p>Speed: <span id="speed-display"></span></p>
+        </div>
         <div id="game-board">
+            <div id="grid-container"></div>
+            <div id="falling-block-container"></div>
             <div id="game-overlay">
                 <div id="game-over-text" style="display: none;">
                     <h2>Game Over</h2>
@@ -18,13 +27,9 @@
                 <button id="start-button">Start</button>
             </div>
         </div>
-        <div class="info">
-            <h2>Score: <span id="score">0</span></h2>
-            <h2>Next</h2>
-            <div id="next-block"></div>
-        </div>
     </div>
     <div id="message-container"></div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
