--- a/index_sp.html
+++ b/index_sp.html
@@ -7,30 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>MAKE10 FallPazzle</h1>
-    <div class="game-wrapper">
-        <div id="game-board">
-            <div id="game-overlay">
-                <div id="game-over-text" style="display: none;">
-                    <h2>Game Over</h2>
-                    <p>Final Score: <span id="final-score">0</span></p>
+    <main class="game-container">
+        <h1>MAKE10 FallPazzle</h1>
+        <div class="game-wrapper">
+            <div class="info">
+                <h2>Score: <span id="score">0</span></h2>
+                <h2>Next</h2>
+                <div id="next-block"></div>
+                <p>Speed: <span id="speed-display"></span></p>
+            </div>
+            <div id="game-board">
+                <div id="grid-container"></div>
+                <div id="falling-block-container"></div>
+                <div id="game-overlay">
+                    <div id="game-over-text" style="display: none;">
+                        <h2>Game Over</h2>
+                        <p>Final Score: <span id="final-score">0</span></p>
+                    </div>
+                    <button id="start-button">Start</button>
                 </div>
-                <button id="start-button">Start</button>
             </div>
         </div>
-        <div class="info">
-            <h2>Score: <span id="score">0</span></h2>
-            <h2>Next</h2>
-            <div id="next-block"></div>
+        <div id="message-container"></div>
+        <div id="controls">
+            <button id="left-button">&#9664;</button>
+            <button id="rotate-button">&#8635;</button>
+            <button id="right-button">&#9654;</button>
+            <button id="down-button">&#9660;</button>
         </div>
-    </div>
-    <div id="message-container"></div>
-    <div id="controls">
-        <button id="rotate-button">回転</button>
-        <button id="left-button">左</button>
-        <button id="right-button">右</button>
-        <button id="down-button">下</button>
-    </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
