feat: ブロック生成ロジックの修正とUIの改善
- ブロックの数字を1-5と5-9の組み合わせからランダムな順序で生成するように修正
- デバッグ用の速度表示を削除
- NEXTブロック表示を中央揃えに調整

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Score: <span id="score">0</span></h2>
             <h2>Next</h2>
             <div id="next-block"></div>
-            <p>Speed: <span id="speed-display"></span></p>
+            <!-- <p>Speed: <span id="speed-display"></span></p> -->
         </div>
         <div id="game-board">
             <div id="grid-container"></div>
