--- a/index_sp.html
+++ b/index_sp.html
@@ -12,28 +12,30 @@
         <div class="game-wrapper">
             <div class="info">
                 <h2>Score: <span id="score">0</span></h2>
-                <h2>Next</h2>
+                <h2 class="next-label">Next</h2>
                 <div id="next-block"></div>
-                <p>Speed: <span id="speed-display"></span></p>
+                <!-- <p>Speed: <span id="speed-display"></span></p> -->
             </div>
-            <div id="game-board">
-                <div id="grid-container"></div>
-                <div id="falling-block-container"></div>
-                <div id="game-overlay">
-                    <div id="game-over-text" style="display: none;">
-                        <h2>Game Over</h2>
-                        <p>Final Score: <span id="final-score">0</span></p>
+            <div class="game-layout">
+                <button id="left-button">&#9664;</button>
+                <div id="game-board">
+                    <div id="grid-container"></div>
+                    <div id="falling-block-container"></div>
+                    <div id="game-overlay">
+                        <div id="game-over-text" style="display: none;">
+                            <h2>Game Over</h2>
+                            <p>Final Score: <span id="final-score">0</span></p>
+                        </div>
+                        <button id="start-button">Start</button>
                     </div>
-                    <button id="start-button">Start</button>
                 </div>
+                <button id="right-button">&#9654;</button>
             </div>
         </div>
         <div id="message-container"></div>
-        <div id="controls">
-            <button id="left-button">&#9664;</button>
-            <button id="rotate-button">&#8635;</button>
-            <button id="right-button">&#9654;</button>
+        <div id="bottom-controls">
             <button id="down-button">&#9660;</button>
+            <button id="rotate-button">&#8635;</button>
         </div>
     </main>
     <script src="script.js"></script>
